@@ -1088,8 +1088,8 @@ speaker: enabled=1, mode=sound
 #
 # The device 'printer' emulates the HP Deskjet 920C printer. The PCL data is
 # sent to a file specified in bochsrc.txt. The current code appends the PCL
-# code to the file if the file already existed. It would probably be nice to
-# overwrite the file instead, asking user first.
+# code to the file if the file already existed. The output file can be
+# changed at runtime.
 #
 # The optionsX parameter can be used to assign specific options to the device
 # connected to the corresponding USB port. Currently this feature is used to
